Attempt to fix techbubble overflow

--- a/components/global/misc/TechBubble/TechBubble.module.scss
+++ b/components/global/misc/TechBubble/TechBubble.module.scss
@@ -10,8 +10,8 @@
 	font-family: Overpass, serif;
 	font-weight: bold;
 	font-size: 1em;
+	line-height: 1em;
 	text-align: center;
-	line-height: 2em;
 	color: global.$White;
 	background-color: global.$Blue;
 }
